--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+find_package(SDL2 REQUIRED CONFIG)
 
 # Add source to this project's executable.
 add_executable(vulkan_guide
@@ -8,12 +9,12 @@ add_executable(vulkan_guide
     vk_initializers.cpp
     vk_initializers.h)
 
-
 set_property(TARGET vulkan_guide PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:vulkan_guide>")
 
 target_include_directories(vulkan_guide PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 target_link_libraries(vulkan_guide vkbootstrap vma glm tinyobjloader imgui stb_image)
 
-target_link_libraries(vulkan_guide Vulkan::Vulkan sdl2)
+target_link_libraries(vulkan_guide Vulkan::Vulkan SDL2::SDL2 SDL2::SDL2main)
+target_compile_features(vulkan_guide PRIVATE cxx_std_14)
 
 add_dependencies(vulkan_guide Shaders)
